[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "find-and-replace-me"
description = "find-and-replace-me"
version = "0.0.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{name = "Tim Paine", email = "t.paine154@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Repository = "https://github.com/timkpaine/find-and-replace-me"
Homepage = "https://github.com/timkpaine/find-and-replace-me"
Documentation = "https://github.com/timkpaine/find-and-replace-me/wiki"
Tracker = "https://github.com/timkpaine/find-and-replace-me/issues"
